--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,14 @@
   <body>
   <h1> Zookeeper </h1>
   <% if user_signed_in? %>
+  <h3>Hello <%= current_user.email %>
   <%= link_to "Edit profile", edit_user_registration_path %> |
   <%= link_to "Logout", destroy_user_session_path, method: :delete  %>
 <% else %>
   <%= link_to "Sign up", new_user_registration_path  %> |
   <%= link_to "Login", new_user_session_path  %>
 <% end %>
+<%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, method: :post %>
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
     <%= yield %>
