--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
 
 
   <body>
-  
+  <h1> Zookeeper </h1>
   <% if user_signed_in? %>
-  <h3>Hello <%= current_user.email %>
+  <h3>Hello <%= current_user.name %>
   <%= link_to "Edit profile", edit_user_registration_path %> |
   <%= link_to "Logout", destroy_user_session_path, method: :delete  %>
 <% else %>
