nested resource for animal and health_checkup

--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -1,4 +1,17 @@
 <%= form_for(@animal) do |f| %>
+
+  <% if @animal.errors.any? %>
+  <div id="error_explanation">
+      <p><%= pluralize(@animal.errors.count, "error") %> prohibited this animal from being saved:</p>
+      
+      <% @animal.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+  </div>
+  <% end %>
+
+
+
     <p>
       <%= f.label :name %><br>
       <%= f.text_field :name %>
