--- a/app/views/health_checkups/new.html.erb
+++ b/app/views/health_checkups/new.html.erb
@@ -1,1 +1,4 @@
+<%= link_to @animal.name, animal_path(@animal) %>
 <%= render 'form' %>
+
+<!--<%= render "form", health_checkup: HealthCheckup.new %>-->
