--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,14 +1,13 @@
-<table>
-    <thead>
-    <tr>
-      <th scope="col">Animal Name</th>
 
-    </tr>
-    </thead>
+<table>
+    <thead><tr>
+      <th>Animal Name</th>
+    </tr></thead>
     <tbody>
         <% @animals.each do |animal| %>
           <tr>
             <td><%= link_to animal.name, animal %></td>
           </tr>
         <%end%>
+      </body>
     </table>
